--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -51,10 +51,10 @@
 		),
 
 		accent2: (
-			bg:				#e89980,
-			fg:				mix(#e89980, #ffffff, 25%),
+			bg:				#855294,
+			fg:				mix(#855294, #ffffff, 25%),
 			fg-bold:		#ffffff,
-			fg-light:		mix(#e89980, #ffffff, 40%)
+			fg-light:		mix(#855294, #ffffff, 40%)
 		),
 
 		accent3: (
