--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1810,7 +1810,7 @@
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #e89980;
+		color: #bc619f;
 		text-decoration: none;
 	}
 
@@ -2035,8 +2035,8 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #e89980;
-			box-shadow: 0 0 0 2px #e89980;
+			border-color: #bc619f;
+			box-shadow: 0 0 0 2px #bc619f;
 		}
 
 	.select-wrapper {
@@ -2146,8 +2146,8 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #e89980;
-			box-shadow: 0 0 0 1px #e89980;
+			border-color: #bc619f;
+			box-shadow: 0 0 0 1px #bc619f;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2342,7 +2342,7 @@
 			}
 
 			.icon.major.accent2 {
-				background: #e89980;
+				background: #bc619f;
 				color: #ffffff;
 			}
 
@@ -2715,7 +2715,7 @@
 		input[type="reset"].special,
 		input[type="button"].special,
 		.button.special {
-			background-color: #e89980;
+			background-color: #bc619f;
 			color: #ffffff !important;
 		}
 
@@ -2996,7 +2996,7 @@
 			}
 
 			.dropotron li.active > a, .dropotron li.active > span, .dropotron li:hover > a, .dropotron li:hover > span {
-				background: #e89980;
+				background: #bc619f;
 				color: #ffffff;
 			}
 
@@ -3170,7 +3170,7 @@
 /* CTA */
 
 	#cta {
-		background: #e89980;
+		background: #bc619f;
 		color: #f9e5df;
 		padding: 3.5em 0 4em 0;
 		text-align: center;
@@ -3192,7 +3192,7 @@
 		#cta .button {
 			box-shadow: none;
 			background: #fff;
-			color: #e89980;
+			color: #bc619f;
 		}
 
 		#cta input[type="text"],
