more color updates

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2347,17 +2347,17 @@
 			}
 
 			.icon.major.accent3 {
-				background: #7fcdb8;
+				background: #7e61bc;
 				color: #ffffff;
 			}
 
 			.icon.major.accent4 {
-				background: #90b0ba;
+				background: #9fbc61;
 				color: #ffffff;
 			}
 
 			.icon.major.accent5 {
-				background: #e5cb95;
+				background: #61bc7e;
 				color: #ffffff;
 			}
 
