--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2372,7 +2372,7 @@
 			}
 
 			.icon.major.accent-ig {
-				background: #bc2a8d;
+				background: #cd486b;
 				color: #ffffff;
 			}
 
@@ -2382,7 +2382,7 @@
 			}
 
 			.icon.major.accent-em {
-				background: #fadb6c;
+				background: #f6c842;
 				color: #ffffff;
 			}
 
