--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2387,8 +2387,8 @@
 			}
 
 			.icon.major.accent-em {
-				background: #fffac9;
-				color: #000000;
+				background: #fce582;
+				color: #ffffff;
 			}
 
 /* Image */
