--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3790,3 +3790,39 @@
 			}
 
 	}
+
+/* Tooltip */
+
+.tooltip {
+	position: relative;
+	display: inline-block;
+	border-bottom: 1px dotted #bc619f;
+}
+
+.tooltip .tiptext {
+	visibility: hidden;
+	background-color: #666;
+	color: #fff;
+	padding: 5px 0;
+	border-radius: 6px;
+	position: absolute;
+	z-index: 1;
+	bottom: 100%;
+	left: 10px;
+	margin-left: -10px;
+}
+
+.tooptip:hover .tiptext {
+	visibility: visible;
+}
+
+.tooltip .tiptext::after {
+	content: " ";
+	position: absolute;
+	top: 100%;
+	left: 25px;
+	margin-left: -5px;
+	border-width: 5px;
+	border-style: solid;
+	border-color: #666 transparent transparent transparent;
+}
