--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3801,7 +3801,7 @@
 
 .tooltip .tiptext {
 	visibility: hidden;
-	width: 100%;
+	width: 200px;
 	background-color: #666;
 	color: #fff;
 	padding: 5px 0;
