bold color in tooltip

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3827,6 +3827,10 @@
 	border-bottom-color: transparent;
 }
 
+.tooltip .tiptext b, .tooltip .tiptext strong {
+	color: #dedede;
+}
+
 .tooltip:hover {
 	cursor: help;
 }
